# LumillyRender

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ibl.hdr  image.ppm  scene.toml
models/simple/: cbox.mtl  cbox.xml  cornell_box.mtl
models/teapot/: default.mtl
scenes/: brdf.toml  debug-nee.toml  external-mtl.toml  new-cbox.toml  primitive.toml  ridaisai-2018.toml  sample.toml  scene.toml  vr.toml  welcome-2018-geo.toml  welcome-2018.toml
src/: aabb.rs  bvh.rs  camera.rs  constant.rs  description.rs  img.rs  intersection.rs  main.rs  material.rs  objects.rs  ray.rs  sample.rs  save.rs  scene.rs  scene_loader.rs  shape.rs  sky.rs  sphere.rs  triangle.rs  util.rs  vector.rs  vector2.rs  vector3.rs
src/material/: blinn_phong.rs  ggx.rs  ideal_refraction.rs  lambert.rs  mod.rs  phong.rs  traits.rs
src/math/: matrix4.rs  mod.rs  traits.rs  vector3.rs  vector4.rs
