[package]
authors = ["pnlybubbles <pnlybubbles@gmail.com>"]
name = "lumilly_render"
version = "0.1.0"

[dependencies]
image = "0.18.0"
num_cpus = "1.6.2"
ordered-float = "0.5.0"
rand = "0.3.15"
scoped_threadpool = "0.1.7"
serde = "1.0.27"
serde_derive = "1.0.27"
threadpool = "1.7.1"
time = "0.1.38"
tobj = "0.1.6"
toml = "0.4.5"
